<resources>
    <string name="app_name">PC Silos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_configuration">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    //MEnu
    <string name="peso">Gráficos de Peso</string>
    <string name="consumo">Gráficos de Consumo</string>
    <string name="reports">Reportes</string>
    <string name="configurations">Configuración</string>
    <string name="cerrar">Cerrar sesión</string>


    //Configuracion
    <string name="selecciona_silo">Seleccione el silo que desea configurar</string>

    //Alertas
    <string name="Config_alert">Configuración de alertas</string>
    <string name="act_des_alert">Desactivar / Activar alerta</string>
    <string name="alert_email">Deseo recibir notificaciones por email</string>
    <string name="inserta_email">Email al que deseas recibir la alerta</string>

    <string name="valores_alerta">¿Para qué valores desea activar las alertas?</string>
    <string name="peso_min">Peso mínimo (kg)</string>
    <string name="peso_max">Peso máximo (kg)</string>
    <string name="peso_espec">Peso específico (kg)</string>
    <string name="btn_guardar">Guardar cambios</string>
    <string name="title_activity_config">Config</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_consum">ConsumActivity</string>
    <string name="title_activity_conf">ConfActivity</string>


    //Tiempo Real
    <string name="last_peso">Último peso registrado</string>


    //consumo
    <string name="tv_consumo_dia">Consumo por hora - Real</string>
    <string name="tv_fecha_consumo_dia">Fecha: </string>

    //peso
    <string name="tv_peso_dia">Consumo por hora - Real</string>
    <string name="tv_fecha_peso_dia">Fecha: </string>

    //configuration
    <string name="tv_configuration_dia">Consumo por hora - Real</string>
    <string name="tv_fecha_configuration_dia">Fecha: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>


