<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.dann.pcsilos.MenuTiempoReal">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <com.tmall.ultraviewpager.UltraViewPager
                android:id="@+id/ultra_viewpager_tiempoReal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/linear_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="fill_horizontal"
                        android:layout_marginBottom="@dimen/cardMarginVertical"
                        android:layout_marginLeft="@dimen/cardMarginHorizontal"
                        android:layout_marginRight="@dimen/cardMarginHorizontal"
                        android:layout_marginTop="@dimen/cardMarginVertical"
                        android:foregroundGravity="left|right"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp"
                        app:cardPreventCornerOverlap="false"
                        app:contentPadding="0dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingBottom="5dp">


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <com.github.anastr.speedviewlib.SpeedView
                                    android:id="@+id/speedView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical|center_horizontal"
                                    app:sv_highSpeedColor="@color/colorAccent"
                                    app:sv_lowSpeedColor="@color/colorRojo"
                                    app:sv_mediumSpeedColor="@color/colorPrimaryDark"
                                    app:sv_speedTextColor="@color/colorPrimaryDark"
                                    app:sv_speedTextSize="50sp"
                                    app:sv_unit="Kg" />
                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp"
                        app:cardPreventCornerOverlap="false"
                        app:contentPadding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_gravity="bottom"
                                android:gravity="bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/pesoSilo_tr"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="450"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="70sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Kg"
                                    android:textColor="@color/cardview_light_background" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="80dp"
                                    android:layout_gravity="right"
                                    android:gravity="bottom|right"
                                    android:orientation="vertical"
                                    android:paddingLeft="15dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:gravity="right"
                                        android:orientation="horizontal">

                                        <LinearLayout
                                            android:layout_width="170dp"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal"
                                            android:paddingRight="10dp">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="@string/peso_max"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/capMax_tr"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="1000"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>


                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:gravity="right"
                                        android:orientation="horizontal"
                                        android:paddingLeft="5dp">

                                        <LinearLayout
                                            android:layout_width="170dp"
                                            android:layout_height="wrap_content"
                                            android:gravity="right"
                                            android:orientation="horizontal"
                                            android:paddingRight="10dp">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="@string/peso_min"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/pesoMin_tr"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="20"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>


                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:gravity="right"
                                        android:orientation="horizontal">

                                        <LinearLayout
                                            android:layout_width="170dp"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:orientation="horizontal"
                                            android:paddingRight="10dp">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="@string/peso_espec"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/pesoEsp_tr"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_weight="1"
                                                android:gravity="right"
                                                android:text="20"
                                                android:textColor="@color/cardview_light_background"
                                                android:textSize="17sp" />
                                        </LinearLayout>


                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingTop="5dp">

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="10dp"
                                    android:text="@string/last_peso"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="15sp" />

                                <TextClock
                                    android:id="@+id/textClock2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:textColor="@color/cardview_light_background"
                                    android:textSize="15sp" />
                            </LinearLayout>
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
